--- a/.env_example
+++ b/.env_example
@@ -6,3 +6,4 @@ HTTP_AUTH_PASS=password
 BOT_ID=2020132697
 DB_FILE_NAME=bot.db
 DISTRICTS_FILE=districts.json
+EMAIL=mail_one@example.com,mail_two@example.com
